# gp-sphinx

./: .gitignore  .tmuxp.yaml  AGENTS.md  CHANGES  LICENSE  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: astro.yml  docs.yml  release.yml  tests.yml
astro/: AGENTS.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
astro/apps/gp-sphinx-docs/: .gitignore  astro.config.ts  package.json  tsconfig.json  vitest.config.ts
astro/fixtures/: doctree.schema.json  hello-symbol.json  hello-world.json  hello-xref-index.json  symbol.schema.json  xref-index.schema.json
docs/: AGENTS.md  api.md  architecture.md  conf.py  configuration.md  gallery.md  index.md  justfile  manifest.json  quickstart.md  redirects.txt  whats-new.md
docs/_ext/: api_demo_layout.py  api_demo_typehints_gp.py  argparse_demo.py  argparse_neo_demo.py  demo_cli.py  docutils_demo.py  docutils_demo_components.py  fastmcp_demo_tools.py  gas_demo_api.py  inline_highlight.py  mermaid_examples.py  package_reference.py  sab_demo.py  sab_meta.py  spf_demo_fixtures.py  sphinx_config_demo.py  sphinx_config_single_demo.py  sphinx_demo_builder.py
docs/_static/css/: custom.css  sab_demo.css
docs/_templates/sidebar/: projects.html
docs/extensions/: index.md
docs/project/: code-style.md  contributing.md  releasing.md
notes/: test-analysis.md
notes/2026-03-28/: 00-overview.md  01-furo-analysis.md  02-phase-0-shared-platform.md  03-phase-1-astro-bridge.md  04-phase-2-multi-project.md  05-phase-3-semantic-export.md  06-phase-4-expansion.md  07-operational-concerns.md
notes/plans/: astro.md
scripts/: docs_split.py
scripts/ci/: bump_version.py  package_tools.py
src/gp_sphinx/: __init__.py  _compat.py  config.py  defaults.py  sphinx_fonts.py
src/gp_sphinx/assets/: __init__.py
src/gp_sphinx/ext/: __init__.py
src/gp_sphinx/theme/: __init__.py
src/gp_sphinx_workspace/: __init__.py
stubs/pygments/lexers/: markup.pyi
tests/: __init__.py  _snapshots.py  _sphinx_scenarios.py  conftest.py  test_config.py  test_docs_package_pages.py  test_ext_argparse.py  test_gp_furo_theme.py  test_gp_furo_theme_equivalence.py  test_gp_furo_theme_tw_contract.py  test_gp_sphinx_vite.py  test_gp_sphinx_vite_bus.py  test_gp_sphinx_vite_hooks.py  test_gp_sphinx_vite_integration.py  test_gp_sphinx_vite_process.py  test_package_reference.py  test_package_tools.py  test_pygments_style.py  test_snapshots.py  test_sphinx_scenarios.py  test_sphinx_vite_builder.py  test_sphinx_vite_builder_build.py  test_sphinx_vite_builder_bus.py  test_sphinx_vite_builder_config.py  test_sphinx_vite_builder_extension_integration.py  test_sphinx_vite_builder_hatch_plugin.py  test_sphinx_vite_builder_hooks.py  test_sphinx_vite_builder_process.py  test_sphinx_vite_builder_vite.py  test_theme.py
tests/__snapshots__/: test_pygments_style.ambr
tests/ci/: __init__.py  test_bump_version.py  test_package_tools.py
tests/docs/: __init__.py  test_cluster_toctree.py  test_docs_policy.py  test_inline_highlight.py  test_live_signature.py  test_no_filler.py  test_no_legacy_pages.py  test_objects_inv_compat.py  test_package_dependents.py  test_package_kitchen_sink.py  test_package_landing.py  test_sidebar_density.py  test_subpage_exists_role.py  test_surface_changelog.py  test_workspace_package_grid_groups.py
tests/docs/__snapshots__/: objects-inv-baseline.txt
tests/ext/: __init__.py  conftest.py  test_argparse_exemplar.py  test_argparse_lexer.py  test_argparse_roles.py  test_cli_usage_lexer.py  test_myst_lexer.py  test_shared_stack_setup.py  test_sphinx_fonts.py
tests/ext/api_style/: test_api_style.py
tests/ext/argparse_neo/: __init__.py  test_compat.py  test_exemplar_config.py  test_multi_page_integration.py  test_nodes.py  test_parser.py  test_renderer.py  test_renderer_section_names.py  test_utils.py
tests/ext/astro_builder/: test_content_config.py  test_href_normalize.py  test_integration.py  test_models.py  test_schema_fixture.py  test_schemas.py  test_translator.py
tests/ext/autodoc_argparse/: conftest.py  test_compat.py  test_domain.py  test_domain_integration.py  test_exemplar_config.py  test_multi_page_integration.py  test_no_index_integration.py  test_nodes.py  test_parser.py  test_renderer.py  test_renderer_section_names.py  test_utils.py
tests/ext/autodoc_docutils/: __init__.py  test_autodoc_docutils_integration.py  test_components.py  test_directives.py  test_doctree.py  test_domain.py  test_domain_xref_integration.py  test_sphinx_config.py
tests/ext/autodoc_sphinx/: __init__.py  test_autodoc_sphinx_integration.py  test_components.py  test_directives.py  test_doctree.py  test_domain.py  test_domain_xref_integration.py
tests/ext/badges/: test_badges.py  test_palettes.py
tests/ext/fastmcp/: test_component_linking.py  test_directives_integration.py  test_fastmcp.py  test_fastmcp_integration.py  test_prototype.py  test_transforms.py
tests/ext/grid/: __init__.py  test_directive_tree.py  test_integration.py  test_options.py
tests/ext/highlighting/: test_inline.py  test_tree_lexer.py
tests/ext/layout/: conftest.py  test_css.py  test_inline.py  test_integration.py  test_js.py  test_nodes.py  test_render.py  test_slots.py  test_snapshots.py  test_transforms.py  test_visitors.py
tests/ext/llms/: conftest.py  test_docs_json.py  test_importable.py  test_llms_full_txt.py  test_llms_txt.py  test_md_twins.py
tests/ext/mermaid/: __init__.py  test_css.py  test_examples.py  test_examples_page.py  test_fallbacks.py  test_integration.py  test_mermaid.py  test_palette_sync.py
tests/ext/octicons/: __init__.py  test_integration.py  test_render.py  test_render_height_parse.py  test_role.py  test_snapshot.py
tests/ext/opengraph/: conftest.py  test_deprecation_warning.py  test_description.py  test_importable.py  test_meta.py  test_meta_emission.py  test_title.py
tests/ext/pytest_fixtures/: _scenario_support.py  (+5 more)
tests/scripts/: __init__.py  test_docs_split.py
tests/visual/: __init__.py  conftest.py  test_baseline_capture.py  test_furo_behaviors.py  test_visual_regression.py
(+79 files in other folders)
