[project]
name = "gp-sphinx-workspace"
version = "0.0.1a7"
description = "Workspace root for gp-sphinx packages"
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
  "gp-sphinx==0.0.1a7",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
sphinx-fonts = { workspace = true }
sphinx-gp-theme = { workspace = true }
sphinx-autodoc-argparse = { workspace = true }
sphinx-autodoc-pytest-fixtures = { workspace = true }
sphinx-autodoc-docutils = { workspace = true }
sphinx-autodoc-sphinx = { workspace = true }
sphinx-autodoc-api-style = { workspace = true }
sphinx-autodoc-fastmcp = { workspace = true }
sphinx-autodoc-typehints-gp = { workspace = true }
sphinx-autodoc-badges = { workspace = true }
sphinx-autodoc-layout = { workspace = true }
gp-sphinx = { workspace = true }

[dependency-groups]
dev = [
  "gp-sphinx",
  "sphinx-autodoc-argparse",
  "sphinx-autodoc-pytest-fixtures",
  "sphinx-autodoc-docutils",
  "sphinx-autodoc-sphinx",
  "sphinx-autodoc-api-style",
  "sphinx-autodoc-fastmcp",
  "sphinx-autodoc-badges",
  "sphinx-autodoc-layout",
  # Docs
  "sphinx-autobuild",
  # Testing
  "pytest",
  "pytest-rerunfailures",
  "pytest-mock",
  "pytest-watcher",
  # Coverage
  "codecov",
  "coverage",
  "pytest-cov",
  # Lint
  "ruff",
  "mypy",
  "tomli; python_version < '3.11'",
  "typing-extensions",
  "types-docutils",
  "types-Pygments",
  "syrupy>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gp_sphinx_workspace"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "scripts/ci:docs/_ext:stubs"
files = [
  "packages/",
  "tests/",
  "scripts/",
  "docs/_ext/",
]

[[tool.mypy.overrides]]
# sphinx_fonts sets private attributes on Sphinx's app object (app._font_preload_hrefs,
# _font_faces, etc.) which aren't declared in sphinx's type stubs.
# The test file also accesses these dynamically-added attrs, so it needs the same suppression.
module = ["sphinx_fonts", "tests.ext.test_sphinx_fonts"]
disable_error_code = ["attr-defined", "unused-ignore"]

[[tool.mypy.overrides]]
# sphinx_autodoc_pytest_fixtures: not yet typed strictly; ignore_errors is temporary
# until targeted disable_error_code can replace it.
module = ["sphinx_autodoc_pytest_fixtures", "sphinx_autodoc_pytest_fixtures.*", "tests.ext.pytest_fixtures.*"]
ignore_errors = true

[tool.ruff]
target-version = "py310"
extend-exclude = [
  "build_extensions.py",
  "copy_packages.py",
  "rewrite_docutils.py",
  "rewrite_sphinx.py",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "gp_sphinx",
  "sphinx_fonts",
  "sphinx_gp_theme",
  "sphinx_autodoc_argparse",
  "sphinx_autodoc_pytest_fixtures",
  "sphinx_autodoc_docutils",
  "sphinx_autodoc_sphinx",
  "sphinx_autodoc_api_style",
  "sphinx_autodoc_fastmcp",
  "sphinx_autodoc_typehints_gp",
  "sphinx_autodoc_badges",
  "sphinx_autodoc_layout",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"docs/_ext/package_reference.py" = ["B009", "D102", "D301", "E501", "PERF401"]
"packages/sphinx-autodoc-argparse/**/*.py" = ["E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"packages/sphinx-autodoc-pytest-fixtures/**/*.py" = ["D417", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"packages/sphinx-autodoc-docutils/**/*.py" = ["D417", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"packages/sphinx-autodoc-api-style/**/*.py" = ["D417", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"packages/sphinx-autodoc-fastmcp/**/*.py" = ["D417", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/autodoc_argparse/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/autodoc_docutils/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/autodoc_sphinx/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/pytest_fixtures/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/api_style/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/fastmcp/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]
"tests/ext/docutils/*.py" = ["D", "E501", "UP", "A", "B", "COM", "EM", "TRY", "PERF", "RUF", "SIM", "FA100"]

[tool.pytest.ini_options]
addopts = "-s --tb=short --no-header --showlocals --doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
markers = [
  "integration: sphinx integration tests (require full sphinx build)",
]
testpaths = [
  "tests",
  "docs",
  "packages/gp-sphinx/src",
  "packages/sphinx-fonts/src",
  "packages/sphinx-gp-theme/src",
  "packages/sphinx-autodoc-sphinx/src",
  "packages/sphinx-autodoc-api-style/src",
  "packages/sphinx-autodoc-fastmcp/src",
]
filterwarnings = [
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.",
  "ignore:The frontend.Option(Parser)? class.*:DeprecationWarning::",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "from __future__ import annotations",
]
